data/derived/comb/progs/unify/prog0820.ml.out
Characters 89-90:
  List.fold_left f base fs;;
                 ^
Error: This expression has type 'a -> 'b -> ('c -> 'd) -> ('a -> 'c) -> 'd
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside ('c -> 'd) -> ('a -> 'c) -> 'd
